--- a/src/components/posterComponent/poster.css
+++ b/src/components/posterComponent/poster.css
@@ -3,9 +3,14 @@
     height: 225px;
     border-radius: 3px;
     overflow: hidden;
+    position: relative;
 }
-
 .image img{
     width: 100%;
     height: 100%;
+}
+.thumb{
+    position: absolute;
+    bottom: 10px;
+    right: 5px;
 }
