--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,9 @@
 .movie-list-container{
   padding: 5px;
-  margin: 30px;
+  margin: 30px 0 30px 0;
+}
+@media only screen and (max-width: 500px) {
+  .movie-list-container{
+      padding: 0;
+  }
 }
